--- a/stock market analysis (1).ipynb
+++ b/stock market analysis (1).ipynb
@@ -213,7 +213,7 @@
     }
    ],
    "source": [
-    "df=pd.read_csv(\"C:/Users/ayushi/Downloads/stocks.csv\")\n",
+    "df=pd.read_csv(\"C:/Users/yasir/Downloads/stocks.csv\")\n",
     "df"
    ]
   },
@@ -721,16 +721,16 @@
       "Collecting yfinanceNote: you may need to restart the kernel to use updated packages.\n",
       "\n",
       "  Downloading yfinance-0.2.43-py2.py3-none-any.whl.metadata (11 kB)\n",
-      "Requirement already satisfied: statsmodels in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (0.14.0)\n",
-      "Requirement already satisfied: pandas>=1.3.0 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from yfinance) (2.2.1)\n",
-      "Requirement already satisfied: numpy>=1.16.5 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from yfinance) (1.24.4)\n",
-      "Requirement already satisfied: requests>=2.31 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from yfinance) (2.32.2)\n",
+      "Requirement already satisfied: statsmodels in c:\\users\\yasir\\anaconda3\\lib\\site-packages (0.14.0)\n",
+      "Requirement already satisfied: pandas>=1.3.0 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from yfinance) (2.2.1)\n",
+      "Requirement already satisfied: numpy>=1.16.5 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from yfinance) (1.24.4)\n",
+      "Requirement already satisfied: requests>=2.31 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from yfinance) (2.32.2)\n",
       "Collecting multitasking>=0.0.7 (from yfinance)\n",
       "  Downloading multitasking-0.0.11-py3-none-any.whl.metadata (5.5 kB)\n",
-      "Requirement already satisfied: lxml>=4.9.1 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from yfinance) (5.2.1)\n",
-      "Requirement already satisfied: platformdirs>=2.0.0 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from yfinance) (3.10.0)\n",
-      "Requirement already satisfied: pytz>=2022.5 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from yfinance) (2024.1)\n",
-      "Requirement already satisfied: frozendict>=2.3.4 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from yfinance) (2.4.2)\n",
+      "Requirement already satisfied: lxml>=4.9.1 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from yfinance) (5.2.1)\n",
+      "Requirement already satisfied: platformdirs>=2.0.0 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from yfinance) (3.10.0)\n",
+      "Requirement already satisfied: pytz>=2022.5 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from yfinance) (2024.1)\n",
+      "Requirement already satisfied: frozendict>=2.3.4 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from yfinance) (2.4.2)\n",
       "Collecting peewee>=3.16.2 (from yfinance)\n",
       "  Downloading peewee-3.17.6.tar.gz (3.0 MB)\n",
       "     ---------------------------------------- 0.0/3.0 MB ? eta -:--:--\n",
@@ -759,21 +759,21 @@
       "  Getting requirements to build wheel: finished with status 'done'\n",
       "  Preparing metadata (pyproject.toml): started\n",
       "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
-      "Requirement already satisfied: beautifulsoup4>=4.11.1 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from yfinance) (4.12.2)\n",
+      "Requirement already satisfied: beautifulsoup4>=4.11.1 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from yfinance) (4.12.2)\n",
       "Collecting html5lib>=1.1 (from yfinance)\n",
       "  Downloading html5lib-1.1-py2.py3-none-any.whl.metadata (16 kB)\n",
-      "Requirement already satisfied: scipy!=1.9.2,>=1.4 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from statsmodels) (1.13.1)\n",
-      "Requirement already satisfied: patsy>=0.5.2 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from statsmodels) (0.5.3)\n",
-      "Requirement already satisfied: packaging>=21.3 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from statsmodels) (23.2)\n",
-      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from beautifulsoup4>=4.11.1->yfinance) (2.5)\n",
-      "Requirement already satisfied: six>=1.9 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from html5lib>=1.1->yfinance) (1.16.0)\n",
-      "Requirement already satisfied: webencodings in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from html5lib>=1.1->yfinance) (0.5.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from pandas>=1.3.0->yfinance) (2.9.0.post0)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from pandas>=1.3.0->yfinance) (2023.3)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from requests>=2.31->yfinance) (2.0.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from requests>=2.31->yfinance) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from requests>=2.31->yfinance) (1.26.18)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\ayushi\\anaconda3\\lib\\site-packages (from requests>=2.31->yfinance) (2024.6.2)\n",
+      "Requirement already satisfied: scipy!=1.9.2,>=1.4 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from statsmodels) (1.13.1)\n",
+      "Requirement already satisfied: patsy>=0.5.2 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from statsmodels) (0.5.3)\n",
+      "Requirement already satisfied: packaging>=21.3 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from statsmodels) (23.2)\n",
+      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from beautifulsoup4>=4.11.1->yfinance) (2.5)\n",
+      "Requirement already satisfied: six>=1.9 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from html5lib>=1.1->yfinance) (1.16.0)\n",
+      "Requirement already satisfied: webencodings in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from html5lib>=1.1->yfinance) (0.5.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from pandas>=1.3.0->yfinance) (2.9.0.post0)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from pandas>=1.3.0->yfinance) (2023.3)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from requests>=2.31->yfinance) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from requests>=2.31->yfinance) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from requests>=2.31->yfinance) (1.26.18)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\yasir\\anaconda3\\lib\\site-packages (from requests>=2.31->yfinance) (2024.6.2)\n",
       "Downloading yfinance-0.2.43-py2.py3-none-any.whl (84 kB)\n",
       "   ---------------------------------------- 0.0/84.6 kB ? eta -:--:--\n",
       "   ---------------------------------------- 84.6/84.6 kB 5.0 MB/s eta 0:00:00\n",
@@ -785,7 +785,7 @@
       "  Building wheel for peewee (pyproject.toml): started\n",
       "  Building wheel for peewee (pyproject.toml): finished with status 'done'\n",
       "  Created wheel for peewee: filename=peewee-3.17.6-py3-none-any.whl size=138939 sha256=32320f6c5a46cec1bcd7e8f4051c5c48e9120a4f103268f66bf531c8e72909fe\n",
-      "  Stored in directory: c:\\users\\ayushi\\appdata\\local\\pip\\cache\\wheels\\3e\\23\\b4\\7729b2d48a34ee9d95c11f7f8dfd4ff0571a056e2691118b34\n",
+      "  Stored in directory: c:\\users\\yasir\\appdata\\local\\pip\\cache\\wheels\\3e\\23\\b4\\7729b2d48a34ee9d95c11f7f8dfd4ff0571a056e2691118b34\n",
       "Successfully built peewee\n",
       "Installing collected packages: peewee, multitasking, html5lib, yfinance\n",
       "Successfully installed html5lib-1.1 multitasking-0.0.11 peewee-3.17.6 yfinance-0.2.43\n"
@@ -1167,11 +1167,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ayushi\\anaconda3\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
+      "C:\\Users\\yasir\\anaconda3\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
       "  self._init_dates(dates, freq)\n",
-      "C:\\Users\\ayushi\\anaconda3\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
+      "C:\\Users\\yasir\\anaconda3\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
       "  self._init_dates(dates, freq)\n",
-      "C:\\Users\\ayushi\\anaconda3\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
+      "C:\\Users\\yasir\\anaconda3\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:473: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
       "  self._init_dates(dates, freq)\n"
      ]
     }
@@ -1276,9 +1276,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ayushi\\anaconda3\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:836: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
+      "C:\\Users\\yasir\\anaconda3\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:836: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
       "  return get_prediction_index(\n",
-      "C:\\Users\\ayushi\\anaconda3\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:836: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
+      "C:\\Users\\yasir\\anaconda3\\lib\\site-packages\\statsmodels\\tsa\\base\\tsa_model.py:836: FutureWarning: No supported index is available. In the next version, calling this method in a model without a supported index will result in an exception.\n",
       "  return get_prediction_index(\n"
      ]
     }
@@ -1465,7 +1465,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ayushi\\anaconda3\\lib\\site-packages\\keras\\src\\layers\\rnn\\rnn.py:204: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "C:\\Users\\yasir\\anaconda3\\lib\\site-packages\\keras\\src\\layers\\rnn\\rnn.py:204: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
       "  super().__init__(**kwargs)\n"
      ]
     }
